# Alpha-Cycle

./: .gitignore  Fix_v1_explain.md  README.md  context.md  fix_v1.md  fix_v2.md  pyproject.toml
.claude/: settings.json
crt-neural-architectures/: .research-state.yaml  config.yaml
crt-neural-architectures/concept/: README.md
crt-neural-architectures/gaps/: active.yaml  resolved.yaml
crt-neural-architectures/hypotheses/v1/: components.yaml  hypothesis.md
crt-neural-architectures/research/cycle-001/: metadata.json  questions.md  synthesis.md
crt-neural-architectures/research/cycle-002/: metadata.json  questions.md  synthesis.md
crt-neural-architectures/research/cycle-003/: questions.md
crt-neural-architectures/resources/: papers.yaml
files/: README.md  SETUP_GUIDE.md  SKILL.md  __init__.py  alpharxiv.py  alphaxiv.py  cli.py  orchestrator.py  project.py  prompts.md
files2/: AUTOMATION_SETUP.md  CLAUDE.md  HYPOTHESIS_TEMPLATE.md  SKILL.md
research_verifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: REPORT_TEMPLATE.md
test-project/: .research-state.yaml  config.yaml
test-project/concept/: README.md
test-project/gaps/: active.yaml  resolved.yaml
test-project/hypotheses/v1/: components.yaml  hypothesis.md  status.yaml
test-project/research/cycle-001/: checkpoint.json  metadata.json  questions.md  synthesis.md
test-project/research/cycle-002/: checkpoint.json  metadata.json  questions.md  synthesis.md
test-project/resources/: code.yaml  papers.yaml
test-project/tests/: registry.yaml
(+39 files in other folders)
