[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-verifier"
version = "0.1.0"
description = "Automates research verification loops between Claude and Alpharxiv"
readme = "files/README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alpha-Cycle", email = "dev@example.com"}
]
keywords = ["research", "verification", "claude", "alpharxiv", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
rv = "files.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["files*"]

[tool.setuptools.package-data]
files = ["*.md"]
